Fix range slider invisible on chrome

--- a/css/style.css
+++ b/css/style.css
@@ -429,12 +429,21 @@ h4, p {
 	margin-top: -4px;
 }
 
-.stat-selector-slider::-webkit-slider-runnable-track, .stat-selector-slider::-moz-range-track {
+.stat-selector-slider::-webkit-slider-runnable-track {
 	width: 100%;
 	height: 3px;
 	cursor: pointer;
 	background: #9a9994;
 	border-radius: 1.3px;
+	border: 0.2px solid #010101;
+}
+
+.stat-selector-slider::-moz-range-track {
+	width: 100%;
+	height: 3px;
+	cursor: pointer;
+	background: #9a9994;
+	border-radius: 10px;
 	border: 0.2px solid #010101;
 }
 
